# os

./: README.md  dev.sh  runWM.sh  runX.sh
.github/workflows/: automations.yml
compositor/: README.md  dev.sh  localRun.sh  picom.conf
shell/: .zshrc
window-manager/: README.md
window-manager/panel/: .gitignore  Cargo.toml  build.rs
window-manager/panel/resources/: #panel.glade#  panel.css  panel.glade  panel.glade~  resources.gresource  resources.xml
window-manager/panel/src/: layout.glade  layout.glade~  main.rs  widget.rs
window-manager/panel/src/apps/: helpers.rs
window-manager/panel/src/calendar/: mod.rs  tests.rs
window-manager/panel/src/calender/: mod.rs
window-manager/panel/src/start_menu/: helpers.rs  mod.rs
window-manager/panel/src/volume/: helpers.rs  mod.rs
window-manager/theme/: dev.sh  localInstall.sh
window-manager/theme/theme/: closeI.xpm  default.theme  depthA.xpm  dframeAB.xpm  dframeAL.xpm  dframeAR.xpm  dframeAT.xpm  dframeATL.xpm  dframeATR.xpm  dframeIB.xpm  dframeIT.xpm  dframeITL.xpm  dframeITR.xpm  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameAT.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  frameIL.xpm  frameIR.xpm  frameIT.xpm  frameITL.xpm  frameITR.xpm  maximizeI.xpm  menuButtonI.xpm  minimizeA.xpm  restoreA.xpm  rolldownA.xpm  rollupA.xpm
window-manager/themes/: dev.sh  exportScript.scm  iconExport.sh  install-light.sh  localInstall.sh
window-manager/themes/dark/: closeI.xpm  default.theme  hideA.xpm  (+8 more)
window-manager/window-melonager/: Cargo.toml  dev.sh  run.sh
(+13 files in other folders)
