[package]
name = "panel"
version = "0.1.0"
authors = ["trickypr <trickypr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.13"
chrono = "0.4"
freedesktop_entry_parser = "1.1"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]

[dependencies.gio]
version = "0.9"
features = ["v2_44"]

[dependencies.glib]
version = "0.10"
